Modified to remove all JWT and only use OAuth login.
